# system-programming

./: .gitignore  CMakeLists.txt  build.sh
src/: large_file.c  main.c  mmap.c
src/exercises/: large_file.c
src/lib/: error_functions.c  get_num.c  test.c  test.h
tests/: test.txt
